fixed stupid blog spacing issue

--- a/css/global.scss
+++ b/css/global.scss
@@ -22,8 +22,7 @@ body {
   }
   
   .subheader + p {
-    margin: 0;
-    margin-top: 4px;
+    margin: 4px 0 45px 0;
     font-size: 22px;
     color: #65696E;
     text-align: center;
